# FamiCent_Flask_agy

./: .flask_secret  .gitignore  AGENTS.md  PRD.md  README.md  alembic.ini  pyproject.toml  rules.md  technotes.md
.hooks/: bump_version.py  install_hooks.py
migrations/: env.py
src/famicent/: __init__.py  app.py
src/famicent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/famicent/auth/: __init__.py  manager.py  mfa.py  routes.py
src/famicent/db/: __init__.py  crypto.py  engine.py  models.py
src/famicent/services/: __init__.py  account_svc.py  payment_svc.py
src/famicent/static/css/: style.css
src/famicent/static/js/: app.js
src/famicent/templates/: accounts.html  app_base.html  base.html  dashboard.html  dbviewer.html  docs.html  login.html  mfa.html  payments.html  settings.html  users.html
src/famicent/utils/: __init__.py  helpers.py
src/famicent/views/: __init__.py  accounts.py  dashboard.py  dbviewer.py  payments.py  settings.py  users.py
tests/: conftest.py  test_auth.py  test_db.py  test_views.py
tests/test_services/: test_account_svc.py  test_payment_svc.py
