[project]
name = "famicent"
version = "1.0.0"
description = "Family financial-account management web app."
authors = [{name = "FamiCent Team"}]
dependencies = [
    "Flask>=3.0",
    "SQLAlchemy>=2.0",
    "alembic",
    "cryptography",
    "argon2-cffi",
    "pyotp",
    "qrcode[pil]",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
    "pre-commit",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
